<resources>
    <string name="app_name">Top Chart</string>
    <string name="play_counts">play counts</string>
    <string name="link">Listen Online</string>
    <string name="name">Name</string>
    <string name="listeners">Listeners</string>
    <string name="artist">Artist</string>
    <string name="duration">Duration</string>
    <string name="chart_filter">Chart Filter</string>
    <string name="change_filter">Change filter</string>
    <string name="artist_lastFM_page">Artist LastFM Page</string>
</resources>